--- a/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.html
+++ b/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.html
@@ -41,8 +41,8 @@
                     </div>
                     <hr>
                 </div>
-                <pulpe-chips-removable-worked-muscle (workedMuscleDeleted)="deleteThis($event)"
-                                                     [workedMuscles]="workedMusclesTmp"></pulpe-chips-removable-worked-muscle>
+                <pulpe-chips-removable-worked-muscle (workedMuscleDeletedAtThisIndex)="deleteWorkedMuscleAtThis($event)"
+                                                     [workedMuscles]="workedMusclesCtrl.value"></pulpe-chips-removable-worked-muscle>
 
             </div>
 
