--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -3,7 +3,7 @@
 </pulpe-page-title>
 
 
-<div class="row card-cascade-parent">
+<div class="row card-cascade-parent pb-4">
     <div class="col-md-12">
         <md-card class="pt-0 white">
             <div class="row">
