--- a/front/src/app/shared/sidebar/sidebar.component.html
+++ b/front/src/app/shared/sidebar/sidebar.component.html
@@ -88,7 +88,7 @@
                         </a>
                     </li>
                     <li class="sidebar-link pt-2 pb-3" [routerLinkActive]="['active']"
-                        [routerLink]="['machines', authenticationProfile.id]"
+                        [routerLink]="['machines']"
                         *ngIf="profileService.profileIsCompleted()">
                         <a>
                             <i class="material-icons">storage</i>
