--- a/front/src/assets/style/custom.scss
+++ b/front/src/assets/style/custom.scss
@@ -243,6 +243,10 @@ html, body {
   display: inline;
 }
 
+tbody tr {
+  background-color: #f5f5f5;
+}
+
 //a {
 //  color: $accent-color !important;
 //}
