Fix url of structure

--- a/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.scss
+++ b/front/src/app/coach/machines/machine-form-dialog/machine-form-dialog.component.scss
@@ -1,4 +1,4 @@
-@import "../../../assets/style/colors";
+@import "../../../../assets/style/colors";
 
 .ion-ios-close-outline {
   font-size: 0.9rem;
