--- a/front/src/app/coach/exercises/exercises.component.html
+++ b/front/src/app/coach/exercises/exercises.component.html
@@ -3,13 +3,27 @@
             [title]="'Liste des exercises'">
     </pulpe-page-title>
 
-    <pulpe-header-list [title]="'Exercices'"
-                       [icon]="'ion ion-person-stalker'"
-                       [nbElements]="exercises.length"
-                       [placeHolderTitle]="'Par nom'"
-                       (filterArgs)="filterArgsChanged($event)">
-    </pulpe-header-list>
-    <pulpe-exercises-list [exercises]="exercises" [filterArgs]="filterArgs"></pulpe-exercises-list>
+    <div class="row pb-3">
+        <md-card class="col-md-12">
+            <div class="row">
+                <div class="col-md-2 text-center my-auto separatorVertical">
+                    <span class="ion ion-podium machinesIcon"></span>
+                    <div class="text-light-weight">
+                        <strong class="text-primary">{{exercises.length}}</strong> Exercices
+                    </div>
+                </div>
+                <div class="col-md-10">
+                    <div class="float-md-right text-center">
+                        <span class="ion ion-ios-search actionsIcon"></span>
+                        <md-input-container class="searchPlaceHolder font-weight-light">
+                            <input mdInput placeholder="Par nom" [(ngModel)]="filterArgs">
+                        </md-input-container>
+                    </div>
+                </div>
+            </div>
+        </md-card>
+    </div>
+    <pulpe-exercises-list [exercises]="exercises"></pulpe-exercises-list>
 
     <div class="row">
         <div class="col-md-12 pt-2 pb-2 btnBottomRight">
