--- a/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
+++ b/front/src/app/coach/exercises/exercises-list/exercises-list.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-    <md-card class="col-md-12 my-auto text-center" *ngIf="exercisesSizes === 0; else display;">
+    <md-card class="col-md-12 my-auto text-center" *ngIf="exercises.length === 0; else display;">
         <div>Aucun exercices</div>
     </md-card>
     <ng-template #display>
-        <table class="col-md-12 table table-striped bg-secondary" *ngIf="exercisesSizes > 0">
+        <table class="col-md-12 table table-striped bg-secondary" *ngIf="exercises.length > 0">
             <thead>
             <tr>
                 <th class="text-white text-center text-light-weight text-uppercase">Type d'exercice</th>
@@ -160,7 +160,7 @@
                         </div>
                         <div class="col-md-6">
                             <button class="ion ion-edit pointer" md-mini-fab mdTooltip="Editer l'exercice"
-                                    [mdTooltipPosition]="'right'"></button>
+                                    [mdTooltipPosition]="'right'" (click)="openExerciseFormDialogToEdit(exercise)"></button>
                         </div>
                     </div>
                 </td>
