--- a/front/src/app/member/program/exercise-preview/exercise-preview.component.html
+++ b/front/src/app/member/program/exercise-preview/exercise-preview.component.html
@@ -1,5 +1,5 @@
 <div class="row" md-line>
-    <pulpe-exercises-type-img [exerciseTypeEnum]="exercisesGroupRawCode"></pulpe-exercises-type-img>
+    <pulpe-exercises-type-img [exerciseTypeEnum]="exercise.type"></pulpe-exercises-type-img>
 
     <div class="col-md-10">
         <h4 class="exerciseTitle">{{exercise.name}}
