Fix exercise-form horizontal scroll bug, footer on responsive, remove some ExerciseType enum not implemented

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -23,10 +23,10 @@
     <footer class="footer bg-gray mt-5" *ngIf="footerMustBeDisplayed()">
         <div class="container h-100">
             <div class="row h-100">
-                <div class="col-md-6 h-100 v-center">
+                <div class="col-6 h-100 v-center">
                     <p class="font-weight-light footer-text">&copy; 2016 Pulpe, Inc.</p>
                 </div>
-                <div class="col-md-6 h-100 v-center justify-content-end">
+                <div class="col-6 h-100 v-center justify-content-end">
                     <a class="font-weight-light icon pointer" href="https://github.com/neogenz/Pulpe.git"><i
                             class="fa fa-github"></i></a>
                 </div>
